# MIT-Graphics-Assignments

./: README.md
Assignment0/: CMakeLists.txt  IFS.cpp  IFS.h  image.h  main.cpp  vectors.h
Assignment1/: CMakeLists.txt  Group.h  Object3D.h  OrthographicCamera.h  Sphere.h  depth1_04.tga  depth1_05.tga  hit.h  main.cpp  output1_07.tga  scene_parser.cpp
Assignment1/output_images/: depth1_05.tga  output1_05.tga
Assignment2/: CMakeLists.txt  Camera.h  group.h  hit.h  main.cpp  orthographicCamera.h  (+7 more)
Assignment3/: CMakeLists.txt
Assignment3/include/: glCanvas.h  group.h  light.h  material.h  orthographicCamera.h  perspectiveCamera.h  phongMaterial.h  plane.h  sphere.h  transform.h  triangle.h
Assignment3/output_images/: output3_03.tga  output3_07.tga  output3_09_fix.tga  output3_10.tga  output3_11.tga  output3_12_fix.tga
Assignment3/src/: glCanvas.cpp  main.cpp  scene_parser.cpp
Assignment4/: CMakeLists.txt
Assignment4/include/: image.h  material.h  object3d.h  phongMaterial.h  plane.h  raytracer.h  transform.h  triangle.h
Assignment4/input_files/: scene4_05_transparent_bar.txt
Assignment4/output_images/: output4_04c.tga  output4_06b.tga  output4_06c.tga  output4_06d.tga  output4_06e.tga  output4_07.tga  output4_11.tga  output4_12.tga  output4_13.tga  output4_14a.tga  output4_14b.tga  output4_14c.tga  output4_14d.tga  output4_14e.tga
Assignment4/output_images(during debugging)/: output4_01.tga  output4_02.tga  output4_04a.tga  output4_04b.tga  output4_04d.tga  output4_05.tga  output4_06a.tga  output4_06b-origin.tga  output4_06b.tga  output4_06c-origin.tga  output4_06c.tga  output4_06d-origin.tga  output4_06d.tga  output4_06e-origin.tga  output4_06e.tga  output4_06f-origin.tga  output4_06f.tga  output4_07-origin.tga  output4_08-origin.tga  output4_08.tga  output4_09-origin.tga  output4_09.tga  output4_10.tga  output4_14a.tga  output4_14b.tga  output4_14c.tga  output4_14c_origin.tga  output4_14d.tga  output4_14e.tga  output4_14f.tga  output4_14f_not_shade_back.tga
Assignment4/src/: main.cpp
(+201 files in other folders)
